# u3d

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
.github/workflows/: CI.yml
IDTF/: ConverterDriver.cpp
IDTF/Common/: MetaDataList.cpp
IDTF/Helpers/: MiscUtilities.cpp  SceneUtilities.cpp
RTL/Component/BitStream/: CIFXBitStreamX.cpp  CIFXDataBlockX.cpp
RTL/Component/BoundHierarchy/: CIFXResultAllocator.h
RTL/Component/CLODAuthor/: PairFinder.h
RTL/Component/Exporting/: CIFXAuthorCLODEncoderX_P.cpp  CIFXAuthorGeomCompiler.cpp  CIFXStdioWriteBufferX.cpp  CIFXWriteManager.cpp
RTL/Component/Generators/PointSet/: CIFXAuthorPointSetResource.h
RTL/Component/Importing/: CIFXStdioReadBufferX.cpp
RTL/Component/Texture/: CIFXTextureObject.cpp
RTL/Kernel/Common/: IFXDebug.cpp
Samples/SampleCode/: CMakeLists.txt  IDTFGen.cpp  Makefile.am  Makefile.in  README.md  environment.yml  test.py  test.stl  vtkU3DExporter.cxx  vtkU3DExporter.h
libIDTF/: IFXOSUtilities.cpp
